--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -155,6 +155,7 @@ select option[disabled] {
 		-moz-box-shadow: 0 0 8px 1px rgba(0,0,0,.5);
 		box-shadow: 0 0 8px 1px rgba(0,0,0,.5);
     z-index: 99999;
+    display: none;
 }
 
 .box-audio .info-audio {
