--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -55,5 +55,8 @@ body,html.frontend{background:#0f2a38}.icon,address{font-style:normal}.siteheade
         right: 17px;
     }
 
+    video {
+        width: 100%;
+    }
    
 }
