--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,13 +39,16 @@ body,html.frontend{background:#0f2a38}.icon,address{font-style:normal}.siteheade
         max-width: 240px;
         background: #000;
         border-radius: 10px;
+        padding: 10px;
     }
 
     .mobile .user-info ul {
         position: static;
+        background: transparent;
     }
-    .mobile .user-info ul:after {
-        top: 24px;
+
+    .mobile .user-info ul li {
+        border-bottom: 1px solid #dddddd4f;
     }
 
     .box-audio .info-audio p {
@@ -63,7 +66,7 @@ body,html.frontend{background:#0f2a38}.icon,address{font-style:normal}.siteheade
         margin: 5px;
     }
     .box-audio .btn-show {
-        display: none !important;
+        display: none;
     }
     .box-audio button:active {
         opacity: 0.67;
